# python-client

./: .gitignore  Makefile  README.md  half_plus_two.ipynb  pyproject.toml  setup.cfg  setup.py  test.py
docs/examples/: Huggingface Transformers.ipynb  MNIST.ipynb  PyTorch Text Classifier With Model Archiver.ipynb  PyTorch Text Classifier.ipynb  Tensorflow MNIST.ipynb  half_plus_two.ipynb
easytensor/: __init__.py  auth.py  config.py  constants.py  upload.py  urls.py
easytensor/pytorch/: __init__.py  upload.py
easytensor/tensorflow/: __init__.py  upload.py
easytensor/transformers/: __init__.py  upload.py
