[metadata]
# replace with your username:
name = easytensor-kamalaldin
version = 0.0.1
url = https://github.com/easytensor/python-client
author = Kamal Kamalaldin
author_email = kamal@easytensor.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
