[metadata]
# replace with your username:
name = easytensor
version = 0.0.8
url = https://github.com/EasyTensor/python-client
author = Kamal Kamalaldin
author_email = kamal@easytensor.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = The official python cient of EasyTensor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
